Update git/vim/tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 source-file "$HOME/.tmuxline.conf"
 
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Start window number at 1
