Update config files
- Set new GPG key
- Remove clang plugin
- Change vim python path
- Disable reattach-to-namespace by default
- Remove annoying virtualenv zsh plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 source-file "$HOME/.tmuxline.conf"
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# For macOS
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set -ga terminal-overrides ",xterm-256color:Tc"
 
