--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,30 +1,27 @@
+############################################
+######           PLUGINS              ######
+############################################
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Source tmuxline config generate by vim
 source-file "$HOME/.tmuxline.conf"
 
-# For macOS
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-
+# Enable true color
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Start window number at 1
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# Enable mouse
 set -g mouse on
 
 # Fix escape not responding instantly.
 set -s escape-time 0
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -T copy-mode-vi C-h select-pane -L
-bind-key -T copy-mode-vi C-j select-pane -D
-bind-key -T copy-mode-vi C-k select-pane -U
-bind-key -T copy-mode-vi C-l select-pane -R
-bind-key -T copy-mode-vi C-\ select-pane -l
+# Use fallback clipboard if tmux-yank can't detect the correct one
+set -g @custom_copy_command 'clipcopy'
+
+run "$HOME/.tmux/plugins/tpm/tpm"
