--- a/.config/trizen/trizen.conf
+++ b/.config/trizen/trizen.conf
@@ -3,6 +3,7 @@
 # trizen configuration file
 
 our $CONFIG = {
+  ask_for_retry                => 1,                                                #  bool -- When `makepkg` fails to build a package, offer the option for trying again.
   aur_results_last_modified    => 1,                                                #  bool -- Show the date in AUR results when the package was last updated.
   aur_results_popularity       => 1,                                                #  bool -- Show the popularity score in AUR results.
   aur_results_show_installed   => 1,                                                #  bool -- Show when a package is installed in AUR results.
@@ -44,5 +45,5 @@ our $CONFIG = {
   sudo_autorepeat_interval     => 180,                                              #   int -- Interval, in seconds, after which `sudo -v` is executed in background (with `sudo_autorepeat`).
   sudo_command                 => "/usr/bin/sudo",                                  #   str -- Command used when special permissions are required and `use_sudo` is set to 1.
   use_sudo                     => 1,                                                #  bool -- Use the `sudo` command when special permissions are required.
-  VERSION                      => 1.37,                                             # float -- The current version number of `trizen`.
+  VERSION                      => 1.38,                                             # float -- The current version number of `trizen`.
 }
