--- a/.tern-config
+++ b/.tern-config
@@ -1,9 +1,11 @@
 {
-  "libs": [
-    "browser"
-  ],
-  "plugins": {
-    "node": {},
-    "angular": {}
-  }
+    "ecmaVersion": 6,
+    "libs": [
+        "ecma5",
+        "ecma6"
+    ],
+    "plugins": {
+        "node": {},
+        "es_modules": {}
+    }
 }
