--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -1,28 +1,28 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Sun, 17 Jun 2018
+# on Sun, 24 Jun 2018
 
 set -g status-justify "left"
 set -g status "on"
 set -g status-attr "none"
-set -g message-command-bg "colour31"
+set -g message-command-bg "#383838"
 set -g status-left-length "100"
-set -g pane-active-border-fg "colour254"
-set -g status-bg "colour234"
-set -g message-command-fg "colour231"
-set -g pane-border-fg "colour240"
-set -g message-bg "colour31"
+set -g pane-active-border-fg "#383838"
+set -g status-bg "#282828"
+set -g message-command-fg "#b8b8b8"
+set -g pane-border-fg "#282828"
+set -g message-bg "#383838"
 set -g status-left-attr "none"
 set -g status-right-attr "none"
 set -g status-right-length "100"
-set -g message-fg "colour231"
-setw -g window-status-fg "colour250"
+set -g message-fg "#b8b8b8"
+setw -g window-status-fg "#585858"
 setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour234"
+setw -g window-status-activity-bg "#282828"
 setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour250"
+setw -g window-status-activity-fg "#585858"
 setw -g window-status-separator ""
-setw -g window-status-bg "colour234"
-set -g status-left "#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour247,bg=colour236] %Y-%m-%d  %H:%M #[fg=colour252,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour252] #h "
-setw -g window-status-format "#[fg=colour244,bg=colour234] #I #[fg=colour250,bg=colour234] #W "
-setw -g window-status-current-format "#[fg=colour234,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour117,bg=colour31] #I #[fg=colour231,bg=colour31,bold] #W #[fg=colour31,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-bg "#282828"
+set -g status-left "#[fg=#383838,bg=#b8b8b8] #S #[fg=#b8b8b8,bg=#282828,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#383838,bg=#282828,nobold,nounderscore,noitalics]#[fg=#b8b8b8,bg=#383838] %Y-%m-%d  %H:%M #[fg=#b8b8b8,bg=#383838,nobold,nounderscore,noitalics]#[fg=#383838,bg=#b8b8b8] #h "
+setw -g window-status-format "#[fg=#585858,bg=#282828] #I #[fg=#585858,bg=#282828] #W "
+setw -g window-status-current-format "#[fg=#282828,bg=#383838,nobold,nounderscore,noitalics]#[fg=#b8b8b8,bg=#383838] #I #[fg=#b8b8b8,bg=#383838] #W #[fg=#383838,bg=#282828,nobold,nounderscore,noitalics]"
