Fix excludesfiles path

--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,7 @@
     ui = auto
 [core]
     pager = less -FMRiX
-    excludesfile = .config/git/excludes
+    excludesfile = ~/.config/git/excludes
 [alias]
     dag = log --graph --format='format:%C(yellow)%h%C(reset) %C(blue)%an <%ae>%C(reset) %C(magenta)%cr%C(reset)%C(auto)%d%C(reset)%n%s' --date-order
 
