--- a/.tmuxline.conf
+++ b/.tmuxline.conf
@@ -1,28 +1,28 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Sun, 24 Jun 2018
+# on Mon, 04 Feb 2019
 
 set -g status-justify "left"
 set -g status "on"
 set -g status-attr "none"
-set -g message-command-bg "#383838"
+set -g message-command-bg "colour19"
 set -g status-left-length "100"
-set -g pane-active-border-fg "#383838"
-set -g status-bg "#282828"
-set -g message-command-fg "#b8b8b8"
-set -g pane-border-fg "#282828"
-set -g message-bg "#383838"
+set -g pane-active-border-fg "colour19"
+set -g status-bg "colour18"
+set -g message-command-fg "colour20"
+set -g pane-border-fg "colour18"
+set -g message-bg "colour19"
 set -g status-left-attr "none"
 set -g status-right-attr "none"
 set -g status-right-length "100"
-set -g message-fg "#b8b8b8"
-setw -g window-status-fg "#585858"
+set -g message-fg "colour20"
+setw -g window-status-fg "colour8"
 setw -g window-status-attr "none"
-setw -g window-status-activity-bg "#282828"
+setw -g window-status-activity-bg "colour18"
 setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "#585858"
+setw -g window-status-activity-fg "colour8"
 setw -g window-status-separator ""
-setw -g window-status-bg "#282828"
-set -g status-left "#[fg=#383838,bg=#b8b8b8] #S #[fg=#b8b8b8,bg=#282828,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#383838,bg=#282828,nobold,nounderscore,noitalics]#[fg=#b8b8b8,bg=#383838] %Y-%m-%d  %H:%M #[fg=#b8b8b8,bg=#383838,nobold,nounderscore,noitalics]#[fg=#383838,bg=#b8b8b8] #h "
-setw -g window-status-format "#[fg=#585858,bg=#282828] #I #[fg=#585858,bg=#282828] #W "
-setw -g window-status-current-format "#[fg=#282828,bg=#383838,nobold,nounderscore,noitalics]#[fg=#b8b8b8,bg=#383838] #I #[fg=#b8b8b8,bg=#383838] #W #[fg=#383838,bg=#282828,nobold,nounderscore,noitalics]"
+setw -g window-status-bg "colour18"
+set -g status-left "#[fg=colour19,bg=colour20] #S #[fg=colour20,bg=colour18,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]#[fg=colour20,bg=colour19] %Y-%m-%d  %H:%M #[fg=colour20,bg=colour19,nobold,nounderscore,noitalics]#[fg=colour19,bg=colour20] #h "
+setw -g window-status-format "#[fg=colour8,bg=colour18] #I #[fg=colour8,bg=colour18] #W "
+setw -g window-status-current-format "#[fg=colour18,bg=colour19,nobold,nounderscore,noitalics]#[fg=colour20,bg=colour19] #I #[fg=colour20,bg=colour19] #W #[fg=colour19,bg=colour18,nobold,nounderscore,noitalics]"
