--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,3 +29,12 @@ map ctrl+7 goto_tab 7
 map ctrl+8 goto_tab 8
 map ctrl+9 goto_tab 9
 
+# Performance settings. ~200fps target
+sync_to_monitor no
+repaint_delay 5
+input_delay 0
+
+# Apperance config
+tab_bar_style powerline
+tab_powerline_style slanted
+macos_titlebar_color background
