--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,6 +9,9 @@ map alt+right send_text all \x1b\x66
 
 macos_option_as_alt yes
 
+# cmd-click to open links on macOS (defaults to ctrl-shift).
+mouse_map cmd+left release grabbed,ungrabbed mouse_handle_click link
+
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
