Disable kitty tab close confirmation

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -42,4 +42,6 @@ tab_bar_style powerline
 tab_powerline_style slanted
 macos_titlebar_color background
 
+confirm_os_window_close 0
+
 include local.conf
