--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,7 +9,9 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 source-file "$HOME/.tmuxline.conf"
 
 # Enable true color
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g allow-passthrough 1
+set -g default-terminal "tmux-256color"
+set -sa terminal-overrides ",*256col*:Tc"
 
 # Start window number at 1
 set-option -g base-index 1
