--- a/tmux/.tmuxline.conf
+++ b/tmux/.tmuxline.conf
@@ -1,21 +1,21 @@
 # This tmux statusbar config was created by tmuxline.vim
-# on Thu, 20 Jan 2022
+# on Wed, 23 Nov 2022
 
 set -g status-justify "centre"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=#b4b7b4,bg=#373b41"
+set -g message-command-style "fg=#bdae93,bg=#504945"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=#373b41"
-set -g status-style "none,bg=#282a2e"
-set -g message-style "fg=#b4b7b4,bg=#373b41"
-set -g pane-border-style "fg=#282a2e"
+set -g pane-active-border-style "fg=#504945"
+set -g status-style "none,bg=#3c3836"
+set -g message-style "fg=#bdae93,bg=#504945"
+set -g pane-border-style "fg=#3c3836"
 set -g status-right-length "100"
 set -g status-left-length "100"
 setw -g window-status-activity-style "none"
 setw -g window-status-separator " "
-setw -g window-status-style "none,fg=#969896,bg=#282a2e"
-set -g status-left "#[fg=#373b41,bg=#b4b7b4] #S #[fg=#b4b7b4,bg=#282a2e,nobold,nounderscore,noitalics]#[fg=#969896,bg=#282a2e] %H:%M "
-set -g status-right "#[fg=#969896,bg=#282a2e] %d %b #[fg=#b4b7b4,bg=#282a2e,nobold,nounderscore,noitalics]#[fg=#373b41,bg=#b4b7b4] #h "
-setw -g window-status-format "#[fg=#969896,bg=#282a2e] #I | #W "
-setw -g window-status-current-format "#[fg=#282a2e,bg=#373b41,nobold,nounderscore,noitalics]#[fg=#b4b7b4,bg=#373b41] #I  #W  #P #[fg=#282a2e,bg=#373b41,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=#665c54,bg=#3c3836"
+set -g status-left "#[fg=#504945,bg=#bdae93] #S #[fg=#bdae93,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#665c54,bg=#3c3836] %H:%M "
+set -g status-right "#[fg=#665c54,bg=#3c3836] %d %b #[fg=#bdae93,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#504945,bg=#bdae93] #h "
+setw -g window-status-format "#[fg=#665c54,bg=#3c3836] #I | #W "
+setw -g window-status-current-format "#[fg=#3c3836,bg=#504945,nobold,nounderscore,noitalics]#[fg=#bdae93,bg=#504945] #I  #W  #P #[fg=#3c3836,bg=#504945,nobold,nounderscore,noitalics]"
