--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@
 ######           PLUGINS              ######
 ############################################
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -25,5 +27,12 @@ set -s escape-time 0
 
 # Use fallback clipboard if tmux-yank can't detect the correct one
 set -g @custom_copy_command 'clipcopy'
+
+set -g @continuum-restore 'on'
+set -g @continuum-boot 'on'
+
+set -g @resurrect-save-shell-history 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
 
 run "$HOME/.tmux/plugins/tpm/tpm"
